<resources>
    <string name="app_name">DIY Vocabulary</string>

    <!--Activity titles-->
    <string name="title_home">Home</string>
    <string name="title_word">Word</string>
    <string name="title_tags">Tags</string>
    <string name="title_authentication">Log in or sign up</string>
    <string name="title_profile">Profile</string>

    <!--Hints-->
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="new_password_hint">New password</string>
    <string name="new_email_hint">New email</string>
    <string name="tag_title_hint">Title</string>
    <string name="word_hint">Word or phrase</string>
    <string name="transcription_hint">Transcription (optional)</string>
    <string name="translation_hint">Translation(s) (optional)</string>
    <string name="explanation_hint">Explanation(s) (optional)</string>
    <string name="usage_example_hint">Usage example(s) (optional)</string>

    <!--Validation-->
    <string name="validation_required">Required</string>

    <!--Errors-->
    <string name="unexpected_error_occurred">An unexpected error has occurred</string>
    <string name="not_authenticated">Not authenticated. Log in and try again</string>

    <!--Labels-->
    <string name="greeting_formatted">Hello, %1$s</string>
    <string name="image_count_formatted">x%1$d</string>
    <string name="usage_example_images">Usage example images</string>
    <string name="last_modified_formatted">Last modified: %1$s</string>

    <!--Buttons-->
    <string name="sign_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Log out</string>
    <string name="reset_password">Reset password</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>

    <!--Floating action buttons-->
    <string name="add_word">Add word</string>
    <string name="add_tag">Add tag</string>

    <!--Alert titles-->
    <string name="error_alert_title">Error</string>

    <!--Alert messages-->
    <string name="password_reset_email_sent_alert_message">Password reset email sent. Check your Email</string>
    <string name="delete_account_confirmation_alert_message">Delete account? This action cannot be undone</string>
    <string name="password_cannot_be_empty_alert_message">The password cannot be empty, try again</string>
    <string name="email_cannot_be_empty_alert_message">The email address cannot be empty, try again</string>

    <!--Alert buttons-->
    <string name="create_tag_alert_button">Create</string>

    <!--Options menu items-->
    <string name="search_options_menu_item">Search</string>
    <string name="profile_options_menu_item">Profile</string>
    <string name="save_options_menu_item">Save</string>
    <string name="delete_options_menu_item">Delete</string>

    <!--Other-->
    <string name="navigate_up_content_description">Navigate up</string>
    <string name="reauthentication_successful">Reauthenticated successfully, you can now update your profile setting</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="email_updated_successfully">Email updated successfully</string>
    <string name="add_tag_chip">Add tag</string>
    <string name="attach_image_content_description">Add image</string>
    <string name="attached_image_content_description">Attached image</string>
    <string name="importing_image_toast">Importing the image…</string>
    <string name="loading_images_snack">Loading images, please wait…</string>
    <string name="cant_attach_more_images_formatted_snack">Can\'t attach more than %1$d images</string>
    <string name="uploading_images_please_wait_snack">Uploading images, please wait…</string>
</resources>